kubernetes/applications/speedtest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: apps
spec:
  selector:
    matchLabels:
      app: speedtest
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: ghcr.io/linuxserver/speedtest-tracker:1.6.1
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            limits:
              cpu: 50m
              memory: 500Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: speedtest
