kubernetes/applications/speedtest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: speedtest
